--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,15 @@
 body {
     background-color: #f9f9f9;
 }
-.grid.wide {
+.container {
+    margin-top: 30px !important;
     border-radius: 15px;
     box-shadow:  10px 10px 20px #b1b1b1,
              -10px -10px 20px #b1b1b1;
     background-color: #fff;
     animation: fadeInGrowth ease-in 0.3s;
     transition: all .2s linear;
+
 }
 @keyframes fadeInGrowth {
     from {
@@ -265,9 +267,10 @@ hr {
 }
 
 .circle {
-    /* border: 3px solid #6a8d71; */
-    width: 500px;
-    height: 500px;
+    /* width: 500px;
+    height: 500px; */
+    width: 100%;
+    height: 100%;
     background-color: #FBF8F1;
     border-radius: 50%;
     position: relative;
@@ -317,7 +320,7 @@ hr {
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
     line-height: 40px;
     border-radius: 5px;
-    margin-top: 20px;
+    margin: 10px 0;
     cursor: pointer;
     transition: all 0.2s linear;
 }
