--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ hr {
     justify-content: center;
 }
 
-.circle {
+.control-container {
     /* width: 500px;
     height: 500px; */
     width: 100%;
@@ -301,13 +301,13 @@ hr {
     text-align: center;
 }
 
-.circle #dice1 {
+.control-container #dice1 {
     background: url('../img/bau.jpg') top center / cover no-repeat;
 }
-.circle #dice2 {
+.control-container #dice2 {
     background: url('../img/cua.jpg') top center / cover no-repeat;
 }
-.circle #dice3 {
+.control-container #dice3 {
     background: url('../img/ga.jpg') top center / cover no-repeat;
 }
 .spin {
@@ -315,7 +315,7 @@ hr {
     width: 200px;
     text-align: center;
     background-color: #E9DAC1;
-    /* background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%); */
+    /* background-image: radial-gradient(control-container 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%); */
     font-weight: bold;
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
     line-height: 40px;
