--- a/css/styleSigning.css
+++ b/css/styleSigning.css
@@ -19,10 +19,11 @@ body {
     border-radius: 20px;
 }
 .content {
-    height: 590px;
+    /* height: 590px; */
     padding: 0;
 }
 .container {
+    height: 90vh;
     margin-top: 30px !important;
     border-radius: 15px;
     box-shadow:  10px 10px 20px #b1b1b1,
@@ -102,8 +103,8 @@ body {
 .avatar-user {
     margin-top: 20px;
     border-radius: 50%;
-    height: 140px;
-    width: 140px;
+    height: 200px;
+    width: 200px;
     border: 1px solid #000;
     padding: 20px;
     background: url('../img/avatar-user.png')  top center / cover no-repeat;
@@ -117,10 +118,7 @@ body {
     transition: all .2s linear;
 }
 .signing-form {
-    width: 400px;
-}
-.form-group {
-    width: 400px;
+    width: 440px;
 }
 .tile {
     align-self: flex-start;
@@ -143,9 +141,9 @@ body {
 .input {
     width: 100%;
     margin-bottom: 20px;
-    height: 35px;
+    height: 38px;
     border-radius: 10px;
-    padding: 5px 32px;
+    padding: 5px 35px;
     font-size: 16px;
   /* width: 100%;
   height:35px;
