--- a/css/responsive.css
+++ b/css/responsive.css
@@ -42,7 +42,7 @@
         font-size: 40px !important;
     }
     .control-coin .coin {
-        font-size: 32px;
+        font-size: 34px;
     }
     .control-container {
         background-color: unset;
@@ -53,12 +53,13 @@
         transform: unset;
     }
     .item .control-coin {
-        height: 100px;
+        height: 140px;
     }
     .increase, .reduce {
         width: 100px;
-        height: 75px;
+        height: 90px;
         font-size: 36px;
+        border-radius: 15px;
     }
     #dice1, #dice2, #dice3 {
         margin-top: 30px;
@@ -71,7 +72,7 @@
         width: 250px;
         text-align: center;
         border-radius: 20px;
-        padding-top: 30px;
+        padding-top: 34px;
         font-size: 30px;
     }
     .toast {
@@ -98,6 +99,7 @@
 @media (min-width: 320px ) and (max-width: 991px) { 
     .row {
         margin: 0;
+        padding: 0;
     }
     .container {
         margin: 0 !important;
@@ -140,6 +142,9 @@
     }
     .info .coin-user {
         margin-right: 15px;
+    }
+    .item {
+        margin-bottom: 60px;
     }
 }
 
