--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px ) and (max-width: 991px) { 
+@media only screen and (min-width: 768px) and (max-width: 991px) { 
     .row {
         margin: 0;
     }
@@ -96,7 +96,7 @@
         font-size: 30px;
     }
 }
-@media (min-width: 320px ) and (max-width: 991px) { 
+@media only screen and (min-width: 480px) { 
     .row {
         margin: 0;
         padding: 0;
